# fastjsondiff

./: .gitignore  README.md  pyproject.toml
fastjsondiff/: cli.py
src/: module.cpp
tests/: test_benchmark.py
